# symbit

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  forge.config.js  package-lock.json  package.json  rollup.config.js  rollup.config.ts  tsconfig.electron.json  tsconfig.json  tsconfig.svelte.json
.github/workflows/: build.yml  check.yml  main.yml
lib/payload_dumper/: payload_dumper.py
public/: global.css  global.js  global.js.map  index.html  index.js  index.js.map
public/icons/mac/: icon.icns
scripts/: build.js  build.ts  lint.ts  start.ts
src/: App.svelte  error.rs  global.ts  index.ts  main.rs  main.ts  root.rs  root.ts  steps.rs  style.rs  tests.rs  update.rs  update.ts  util.rs  util.ts  views.rs
src/components/: Button.svelte  Dropdown.svelte  Link.svelte  Loader.svelte  Step.svelte  StepBar.svelte  StepDoneButton.svelte  TextInput.svelte  TopBar.svelte  index.ts
src/pages/: index.svelte  root.svelte  update.svelte
src/pages/steps/: ConnectPhone.svelte  DownloadMagisk.svelte  Flash.svelte  Flash.ts  PatchBootImage.svelte  RootFinish.svelte  RootFlash.svelte  RootPrerequisites.svelte  UnlockBootloader.svelte  flash.ts  index.ts
src/views/: index.svelte  root.svelte  update.svelte
src/views/steps/: ConnectPhone.svelte  DownloadMagisk.svelte  Finish.svelte  Flash.svelte  GetLatestFactoryImage.svelte  PatchBootImage.svelte  Prerequisites.svelte  UnlockBootloader.svelte  flash.ts  index.ts
