[package]
name = "symbit"
version = "0.1.0"
authors = ["Raphael Tang <raphpb1912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
indoc = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
zip = { version = "0.5", default-features = false }