[package]
name = "symbit"
version = "0.1.0"
authors = ["Raphael Tang <raphpb1912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
zip = "0.5.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }